test/invalid/baseline/extattr-invalid-rhs.txt
Syntax error at line 1 in extattr-invalid-rhs.webidl:
[Exposed=*/]
          ^ Expected a closing token of the extended attribute list
